Update StatsService.java